fixed blurring and cleared text

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -83,36 +83,29 @@ section#body{
     p{
         font-size: 1.5em;
     }
-    .highlight{
-        background-color: yellow;
-        color: black;
-    }
     sup{
         cursor: pointer;
+    }
+    .highlight{
+        background: yellow;
+    }
+    div{
+        transition: filter 0.9s ease;
     }
 }
 
 .imageContainer{
     width: 100%;
     height: 600px;
+    margin: 50px 0 50px 0;
+    transition: filter 0.9s ease;
 }
 
-.blurredText{
-    transition: all 0.9s ease;
-    text-shadow: 0 0 50px black; 
-    color: transparent; 
-}
 .blurredDiv{
     filter: blur(8px);
     transition: all 0.9s ease;
 }
-.imageContainer{
-    transition: all 0.9s ease;
-}
-.extrablurredDiv{
-    filter: blur(15px);
-    transition: all 0.9s ease;
-}
+
 
 
 // audio
